--- a/day3/Cargo.toml
+++ b/day3/Cargo.toml
@@ -1,9 +1,10 @@
 [package]
-name = "aoc_utils"
+name = "day3"
 version = "0.1.0"
-authors = ["suppergerrie2 <contact@suppergerrie2.com>"]
+authors = ["suppergerrie2"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+aoc_utils = {path = "../aoc_utils"}
